@@ -1,8 +1,32 @@
 xps.1.1
+
+; this code performs the YV12 -> RGB conversion.
+; Y, U, and V textures are inputted (pre-scaled by the hardware)
+; RGB values are then calculated.
+
+; Formula is as follows:
+
+; We start with separate Y, U, V textures.  In byte notation, they have the following allowed ranges:
+
+; Y in [16,235]
+; U in [16,240]
+; V in [16,240]
+
+; Step 1: These are converted to a 0..1 range for Y and a -0.5..0.5 range for U and V:
+
+; we let Y' = (Y-16)/219
+; we let U' = (U-128)/235
+; we let V' = (V-128)/235
+
+; Step 2: We then calculate using the known YUV->RGB formula:
+
+; r0_R = Y'              + 1.403 * V'
+; r0_G = Y' - 0.344 * U' - 0.714 * V'
+; r0_B = Y' + 1.770 * U'
+
+; see http://www.fourcc.org/fccyvrgb.php for more info
+
 ; Set up u and v co-efficients, to be doubled before applying
-;def c0, 0     ,0.172,0.885,0
-;def c1, 0.7015,0.357,0    ,0
-; colour space denormalization factors added
 def c0, 0      ,0.18664,0.96032,0
 def c1, 0.76120,0.38738,0      ,0
 ; setup sign multiplier value as constants can't be negative
@@ -19,11 +43,14 @@ tex t2
 
 ; try to keep this to 4 or less ops!
 
-; r0 = u*ufac, r1 = v*vfac; apply bias to u and v
+; r0 = (u-0.5)*c0*2, r1 = (v-0.5)*c1*2;
 xmma_x2 r0,r1,discard, t1_bias,c0, t2_bias,c1
+
 ; r0 = r0 + r1, with green channel negate
 xmma discard,discard,r0, r0,c2_bx2, r1,c2_bx2
+
 ; r1 = 2*yfac*(y-yadj)
 xmma_x2 discard,discard,r1, t0,c4, -c3,c4
+
 ; r0 = r0 + r1 (alpha set from y, a = 1.0)
 add r0, r0,r1
